test: add apikey authentication
